--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,25 @@
 body {
     background-color: bisque;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
 
     float: right;
     width: 300px;
+    border: 5px; 
+    padding: 15px;
+    margin: 15px;
+    border-radius: 10%;
+
 }
+
+footer{
+    border-top: 3px solid white;
+
+}
+
+h1{
+    border-right:solid 3px white
+}
+
